--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -4,7 +4,7 @@ vars:
   GOOS: "{{default OS .GOOS}}"
   DC_DIR: "deployment/docker-compose"
   INFRA_DC_FILE: "{{.DC_DIR}}/infra.yml"
-  APPS_DC_FILE: "{{.DC_DIR}}/apps.yml"
+  APPS_DC_FILE: "{{.DC_DIR}}/app.yml"
   SLEEP_CMD: '{{if eq .GOOS "windows"}}timeout{{else}}sleep{{end}}'
 
 
